# datatalk

./: .env.example  .envrc  .gitignore  DEVELOPING.md  Procfile  README.md  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml  requirements.txt  serve_frontend.py
.claude/agents/: architect.md  dev.md  prod-mgr.md  proj-mgr.md  ux.md
backend/: pyproject.toml
backend/datatalk/mcp_server/: __main__.py  server.py
backend/datatalk/mcp_server/tools/: query.py
backend/datatalk/pipeline/loaders/: dime_loader.py  fec_loader.py  opensecrets_loader.py
backend/datatalk/pipeline/sample_data/opensecrets/: cands.csv  indivs.csv  pac_to_cand.csv  pacs.csv
backend/datatalk/pipeline/scrapers/: dime.py  fec.py  opensecrets.py
backend/tests/: test_fec_pipeline.py  test_mcp_tools.py  test_opensecrets_pipeline.py
docs/: Design-v2.md  PRD-v2.md  evaluation-methodology.md  evaluation-plan.md
frontend/: README.md  librechat.yaml  system-prompt.md
infra/docker/: Dockerfile.backend  chainlit_stub.py  init-documentdb.sh  init-documentdb.sql  requirements-mcp.txt
ingestion/: ingestion.py
scripts/: import_dime.py  import_fec.py  import_opensecrets.py  ollama.sh  run_benchmark.py
tests/: test_benchmark_runner.py
tests/benchmarks/: questions.yaml
tests/benchmarks/results/: .gitignore
