[project]
name = "datatalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiocache>=0.12.3",
    "aiomysql>=0.2.0",
    "anthropic==0.49.0",
    "chainlit",
    "chainlite",
    "fastapi>=0.115.14",
    "flask>=2.3.2",
    "jinja2>=3.1.6",
    "json-repair>=0.28.3",
    "langchain==0.2.17",
    "langchain-core==0.2.43",
    "langchain-openai>=0.1.7",
    "langchain-text-splitters==0.2.4",
    "litellm>=1.43.0",
    "mysql-connector-python>=9.1.0",
    "openai>=1.55.3",
    "opentelemetry-instrumentation-anthropic==0.38.12",
    "opentelemetry-instrumentation-langchain==0.38.12",
    "pandas>=2.2.2",
    "psutil>=6.0.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.9.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "redis>=5.0.8",
    "requests>=2.31.0",
    "rich>=14.1.0",
    "suql>=1.1.9b0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.5",
    "typing-extensions>=4.12.2",
    "urllib3>=1.26.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.uv.sources]
chainlit = { git = "https://github.com/Chainlit/chainlit.git", subdirectory = "backend", rev = "203b6821ef2e9697f1da8cb8ebda7ba5a9dd5be8" }
chainlite = { git = "https://github.com/stanford-oval/chainlite.git", rev = "765776e8fe4fb9d54c507934ea20267ae1bedcfb" }
