[project]
name = "datatalk-backend"
version = "0.1.0"
description = "Datatalk backend — data pipelines, MCP server, evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "requests>=2.31.0",
    "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
