[project]
name = "datatalk-backend"
version = "0.1.0"
description = "Datatalk backend — data pipelines, MCP server, and evaluation system"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
