[project]
name = "datatalk-backend"
version = "0.1.0"
description = "Datatalk backend — MCP server, data pipelines, and evaluation system"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "httpx-sse>=0.4.0",
    "pydantic>=2.0",
    "uvicorn>=0.30.0",
    "psycopg2-binary>=2.9",
    "requests>=2.31.0",
    "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.scripts]
datatalk-mcp = "datatalk.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["datatalk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
pythonpath = [".."]
